tetrate/tis1701/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-compliance-policy-env-chainsaw
spec:
  steps:
    - name: apply-check-compliance-policy-env-policy
      try:
        - apply:
            file: ../check-compliance-policy-env.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-good-deployment
      try:
        - apply:
            file: good-resource.yaml

    - name: apply-bad-deployment (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource.yaml
